# pr-note

./: Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-template.tera
.github/workflows/: ci.yml  pr-note.yml  publish-crate.yml  publish-crates.yml  publish-npm.yml  publish-package.yml  release.yml
src/: cli.rs  main.rs
src/doc/: mod.rs  template.md  template.tera
src/github/: client.rs  mod.rs
src/github/graphql/: mod.rs  query.graphql
