[package]
name = "pr-note"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["env", "derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
graphql_client = { version = "0.14" }