[package]
name = "pr-note"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/K-tecchan/pr-note"
readme = "README.md"
description = "A command-line tool to generate PR notes summarizing unmerged PRs on GitHub between two branches."
keywords = ["github", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3", features = ["env", "derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
graphql_client = { version = "0.14" }
tera = { version = "1.20" }
regex = { version = "1" }
